--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,1 +1,20 @@
-nltk==3.8.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+docopt==0.6.2
+filelock==3.9.0
+fsspec==2023.4.0
+idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+mpmath==1.2.1
+networkx==3.0rc1
+numpy==1.25.2
+pipreqs==0.4.13
+pytorch-triton-rocm==2.1.0+34f8189eae
+requests==2.31.0
+sympy==1.11.1
+torch==2.2.0.dev20230913+rocm5.6
+tqdm==4.66.1
+typing_extensions==4.4.0
+urllib3==2.0.4
+yarg==0.1.9
